Terms and Privacy uploaded

--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,75 @@
-Privacy content
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Privacy Policy<</title>
+</head>
+<body>
+<h1>Privacy Policy</h1>
+<strong>Effective from: 01 February 2025</strong>
+<br/>
+<br/>
+This Privacy Policy explains how Sole Proprietorship Daniil Klimianok ("the company") collects and processes your personal data when you use any of our mobile applications ("apps" or "games") published on Google Play Market or the Apple AppStore.
+<br/>
+We take the protection of both personal and non-personal data seriously. This Policy explains what data we collect, how we use it, and why we need it.
+<br/>
+This Privacy Policy fully complies with the GDPR in the EU and COPPA in the US.
+<br/>
+We periodically update this Privacy Policy. You'll be notified of any changes through the updated date at the top of the policy. Depending on the changes, we may provide additional notice or request renewed consent. We encourage you to review this Privacy Policy regularly to stay informed about your data protection rights.
+<br/>
+<h2>Data Collection</h2>
+<h3>Information Automatically Collected Through Applications</h3>
+We do not collect Personal Information that directly identifies you or can be used alone to contact you. This means we don't collect your full name, physical address, email, phone number, photograph, geolocation, credit card information, or usernames.
+<br/>
+The only Personal Information we collect is a unique device identifier for advertising ("advertising ID"), such as the Google Advertiser ID or Apple ID for Advertising.
+<br/>
+Additionally, we collect Non-Personal Information, which cannot identify or contact you directly, including:
+<br/>
+<li>User Information: General details such as age, approximate location, gender, etc.</li>
+<li>Device Information: Data related to your device, including hardware, software, firmware, screen resolution, etc.</li>
+<li>App Usage Data: Insights on your interaction with the app, including game progress, scores, preferences, and selected options.</li>
+<br/>
+<h2>Data Processing and Usage</h2>
+<h3>Personal Information</h3>
+Used to provide users aged 16 and above (with consent) personalized advertisements by sharing their advertising IDs with ad network partners, as detailed under Sharing of Information.
+<br/>
+<h3>Non-Personal Information</h3>
+Used to monitor and analyze app distribution statistics, including audience demographics, geographic distribution, device types, installation rates, and session activity, to enhance and develop the app.
+<br/>
+Used to track trends, usage patterns, and user engagement within the app.
+<br/>
+<h3>Processing of Directly Submitted Information</h3>
+Users may provide unregulated data through email or website contact forms. We typically don't process Personal Information from these requests, focusing instead on general feedback, complaints, and suggestions for improving our apps.
+<br/>
+However, for specific cases - such as support requests, accidental purchases, personal data removal requests, or complaints—we may use necessary Personal Information to resolve the issue.
+<h3>Data Retention</h3>
+We keep your data only as long as necessary to provide our services or fulfill the purposes outlined above. We may need to store data longer to comply with legal obligations, such as accounting regulations, or to handle legal claims.
+<br/>
+When we no longer need your data, we either delete or anonymize it. We never retain data longer than three (3) years after your last interaction with our apps.
+<h2>Data Sharing</h2>
+<h3>Sharing of Non-Personal Data</h3>
+For all adults-targeted apps and games, we may share non-personal information about you with the following recipients:
+<li><strong>Google Analytics</strong> - <a href="https://support.google.com/analytics/topic/2919631?hl=en&ref_topic=1008008&sjid=3504695537492073945-EU">https://support.google.com/analytics/topic/2919631?hl=en&ref_topic=1008008&sjid=3504695537492073945-EU</a></li>
+These services are used solely to collect and analyze general app usage statistics. We share only Non-Personal Information with these third parties. Their data handling practices aren't covered by this Privacy Policy. Please refer to their respective privacy policies for information about their data processing.
+<h2>Personalized Advertisements</h2>
+To enhance ad relevance in our apps, personalized ads are enabled by default. We need your consent to process data for:
+<li>Tracking your content engagement in our apps and games, as well as your online behavior.</li>
+<li>Delivering, targeting, and optimizing advertisements within our apps and games.</li>
+<br/>
+For this purpose, we may share your advertising ID with these ad networks to serve behavioral (targeted) ads:
+<li><strong>Google AdMob</strong>, Privacy Policy located at <a href="https://www.google.com/policies/technologies/ads/">https://www.google.com/policies/technologies/ads/</a></li>
+<br/>
+To opt out from Google Ads Personalization please visit following link <a href="https://www.google.com/settings/ads">https://www.google.com/settings/ads</a>.
+<br/>
+<h3>Disable Personalized Advertisement</h3>
+You can disable personalized advertising or revoke your consent at any time. You can disable personalized advertising in our apps and games by adjusting your device's privacy settings.
+<h2>Payment Information</h2>
+All in-app purchases are handled by external payment processors (Google Play Market and Apple Store), who may collect information directly from you. These processors may request your address, bank, or credit card details according to their privacy policies, which we recommend reviewing before sharing personal information.
+<br/>
+External payment processors don't share your information with us, and we don't store credit card details. We only receive transaction summaries, including amounts, to grant access to your purchases.
+<h2>Age Limits</h2>
+Our applications are intended for users aged 16 and older. This Privacy Policy applies exclusively to adult users. Each app's target audience is specified in its Google Play Market or App Store description. By using our adult-oriented apps and games, you confirm you're at least 16 years old.
+<h2>Your Requests Related to Data Protection and Processing</h2>
+You may address your requests by:
+<br/>
+<strong>E-mail: <a href="mailto:mandalaigames@gmail.com">mandalaigames@gmail.com</a></strong>
+</body>
