--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,64 @@
-Terms content
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Terms of Service</title>
+</head>
+<body>
+<h1>Terms of Service</h1>
+<strong>Last updated: 01 Feb 2024</strong>
+<h2>AGREEMENT TO TERMS</h2>
+These Terms of Service constitute a legally binding agreement (the "Agreement") between you (whether personally or on behalf of an entity) and Sole Proprietorship Daniil Klimianok ("the Company"). By using the Application, you agree to be bound by these terms of use and all applicable laws and regulations, and you acknowledge responsibility for compliance with any applicable local laws. If you do not agree with any of these terms, you may not use the Application.
+<h2>MODIFICATIONS TO TERMS OF SERVICE</h2>
+The Company may modify these Terms of Service. We will notify you of any changes by updating the "Last updated" date, and you waive any right to receive specific notice of each change. You are responsible for periodically reviewing these Terms of Service to stay informed of updates.
+<h2>TERMINATION</h2>
+These Terms of Service shall remain in full force and effect while you use the Application.
+<h2>NTELLECTUAL PROPERTY RIGHTS</h2>
+The Company respects intellectual property rights and expects users to do the same. Unless otherwise stated, the Application and its associated content are our exclusive property. All source code, databases, functionality, software, website designs, audio, video, text, photographs, and graphics (collectively, the "Content"), as well as the trademarks, service marks, and logos (the "Marks"), are owned or controlled by the company or licensed to us, and are protected by copyright, trademark laws, and various intellectual property rights under domestic and international laws.
+<br/>
+Except as expressly allowed in these Terms of Service, no part of the Application, Content, or Marks may be copied, reproduced, aggregated, republished, uploaded, posted, publicly displayed, encoded, translated, transmitted, distributed, sold, licensed, or otherwise exploited for any commercial purpose without our explicit prior written consent.
+<br/>
+If you are eligible to use the Application, you are granted a limited license to access and use the Application, as well as download or print copies of the Content you have properly accessed, solely for personal, non-commercial purposes. The company reserves all rights not expressly granted to you in relation to the Application, Content, and Marks.
+<h2>USE LICENSE</h2>
+If you access the Application via a mobile application, then the Company grants you a revocable, non-exclusive, non-transferable, limited right to install and use the mobile application on wireless electronic devices owned or controlled by you. You may access and use the mobile application on such devices strictly in accordance with the Terms of Service of this mobile application license contained in these Terms of Service.
+<br/>
+The Company reserves the right, but not the obligation, to (1) monitor the Application for violations and take legal action, including reporting to authorities, (2) Restrict, limit, or disable access to any Contributions or content that burdens our systems, (3) Manage the Application to protect our rights and ensure its proper functioning.
+<br/>
+You shall not (1) use the application in violation of any laws, or remove or alter any proprietary notices, (2) Use the application for commercial purposes or in ways it was not intended for, (3) make the application accessible to multiple users or devices at once, or create competing products or services.
+<h2>SUBMISSIONS</h2>
+You agree that any feedback, suggestions, or other information ("Submissions") provided to the Company are non-confidential and become our sole property. The Company owns all rights, including intellectual property rights, and may use and share these Submissions for any lawful purpose without compensation or acknowledgment. You waive any moral rights to the Submissions and confirm they are original or that you have the right to submit them. You agree that there will be no recourse against the Company for any alleged infringement of proprietary rights in your Submissions.
+<h2>THIRD-PARTY WEBSITES AND CONTENT</h2>
+<br/>
+The App may include links to third-party websites ("Third Party Sites"). The Company is not responsible for outdated information on these sites. These sites may have their own privacy policies, and the Company is not liable for their practices. We recommend reviewing the privacy policies of these third parties before sharing any personal information.
+<h2>APPLICABLE LAW AND JURISDICTION</h2>
+The Application is accessible from countries where local technology allows. Since laws vary by location, by using the Mobile Application, both you and the Company agree that the laws of the Republic of Poland and the European Union will govern all matters related to the use of the Application.
+<br/>
+You agree that any disputes arising from these Terms of Service will be subject to the exclusive jurisdiction of the courts in the Republic of Poland.
+<h2>MODIFICATIONS AND INTERRUPTIONS</h2>
+The Company reserves the right to add, remove, or modify features and functions of the Apps at any time, without notice. We are not obligated to update the information on the Application, but when new versions or features are released, we may require you to update the App on your device. Updates may occur automatically or with prior notice, and you may need to accept the current EULA before using new versions. Support for older versions may end once updates or new versions are available. We are not obligated to provide updates or new versions.
+<br/>
+While we strive to keep the Application available, we cannot guarantee its constant availability. Maintenance, technical issues, or other problems may cause interruptions or delays. We reserve the right to change, suspend, or discontinue the Application at any time without notice. We are not liable for any loss, damage, or inconvenience caused by downtime or discontinuation.
+<br/>
+The Application may contain errors or inaccuracies in information such as descriptions, pricing, or availability. We reserve the right to correct these errors and update the information at any time, without prior notice.
+<h2>USER-GENERATED CONTENT AND INTERPRETATION</h2>
+The Company does not collect user-generated content, including but not limited to digital drawings created within the application. Such user-generated content is solely stored on the user's mobile device. The Company does not exercise control over or moderation of user-generated content. The user bears full responsibility for any content they create and submit for interpretation. All user-generated content must comply with applicable local laws.
+<br/>
+Such interpretation is provided solely for informational purposes and does not constitute individualized medical advice or recommendations. The interpretation of user content is automated by OpenAI, which operates in accordance with its Privacy Policy located at <a href="https://openai.com/policies/privacy-policy">https://openai.com/policies/privacy-policy</a> and Terms of Use located at <a href="https://openai.com/en-GB/policies/terms-of-use">https://openai.com/en-GB/policies/terms-of-use</a>.
+<h2>DISCLAIMER AND WARRANTIES</h2>
+To the fullest extent allowed by law, our services are provided "as is" without any warranties. The Company does not endorse user content or third-party sites linked to the services. We do not guarantee specific results from using the services, and your use is at your own risk.
+<br/>
+We are not responsible for third-party products or services advertised or offered through the Application. Transactions with third parties are your responsibility, and you should use caution.
+<br/>
+The Company makes no guarantees about the accuracy or reliability of the services' content. We are not liable for errors, viruses, unauthorized access, or interruptions in the service.
+<h2>INDEMNIFICATION</h2>
+You agree to indemnify the Company from and against any and all claims, liabilities, losses, damages, obligations, costs, and expenses (including reasonable attorneys' fees and costs) arising out of, related to, or that may arise in connection with: (1) your use of our Services; (2) User Content provided by you or through use of your Membership; (3) any actual or alleged violation or breach by you of these Terms of Use; (4) any actual or alleged breach of any representation, warranty, or covenant that you have made to the Company; or (5) your acts or omissions. You agree to cooperate fully with the Company in the defense of any claim that is the subject of your obligations hereunder.
+<h2>USER DATA</h2>
+You agree that the Company may collect technical data, such as information about your device, system, software, and peripherals, to support software updates, product support, and other services related to our apps. This information will be used in accordance with the Privacy Policy.
+<br/>
+If you leave reviews on app stores, social media, or other platforms, your public username and review may be made available. The Company may monitor user communications for security and training purposes and may remove content deemed inappropriate, though we are not obligated to do so.
+<h2>PRIVACY POLICY</h2>
+The Company cares about data privacy and security. Please review our <strong><a href="../mandala-art-therapy/privacy.html">Privacy Policy</a></strong>. By using the Application, you agree to be bound by our Privacy Policy, which is incorporated into these Terms of Service.
+<h2>HOW TO CONTACT THE COMPANY</h2>
+Daniil Klimianok has the following contact information:
+<br/>
+<strong>E-mail: <a href="mailto:mandalaigames@gmail.com">mandalaigames@gmail.com</a></strong>
+</body>
